--- a/templates/aerospike.service.j2
+++ b/templates/aerospike.service.j2
@@ -1,31 +1,20 @@
 [Unit]
-Description=Varnish Cache, a high-performance HTTP accelerator
+Description=Aerospike Server
 After=network-online.target
+Wants=network.target
 
 [Service]
-Type=forking
-KillMode=process
-
-{% if varnish_pidfile %}
-PIDFile={{ varnish_pidfile }}
-{% endif %}
-
-# Locked shared memory - should suffice to lock the shared memory log
-# (varnishd -l argument)
-# Default log size is 80MB vsl + 1M vsm + header -> 82MB
-# unit is bytes
-LimitMEMLOCK=85983232
-
-# Enable this to avoid "fork failed" on reload.
-TasksMax=infinity
-
-# Maximum size of the corefile.
-LimitCORE=infinity
-
-ExecStart=/usr/sbin/varnishd -a {{ varnish_listen_address }}:{{ varnish_listen_port }} -T {{ varnish_admin_listen_host }}:{{ varnish_admin_listen_port }}{% if varnish_pidfile %} -P {{ varnish_pidfile }}{% endif %} -f {{ varnish_config_path }}/default.vcl -S {{ varnish_config_path }}/secret -s {{ varnish_storage }} {{ varnishd_extra_options }}
-ExecReload=/usr/sbin/varnishreload
-
-Restart=on-failure
+LimitNOFILE=100000
+TimeoutSec=600
+User=root
+Group=root
+EnvironmentFile=/etc/sysconfig/aerospike
+PermissionsStartOnly=True
+ExecStartPre=/usr/bin/asd-systemd-helper
+ExecStart=/usr/bin/asd $ASD_OPTIONS --config-file $ASD_CONFIG_FILE --fgdaemon
+ExecStartPre=-/bin/systemctl start aerospike_telemetry
+ExecStopPost=-/bin/systemctl stop aerospike_telemetry
 
 [Install]
 WantedBy=multi-user.target
+
